i fixed the overlapping and added style to login

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,88 +1,90 @@
 
+ 
 .home {
-    width: 100%;
-    height: 100vh;
-    background-color: #090c31;
-   
-    position: relative; 
-  
-    
-   
-   
-    > main {
-      position: absolute;
-      text-transform: uppercase;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      padding: 2rem;
-      justify-content: center;
-      
-    }
-  
-  
-    > main > h1 {
-      font: 400 6rem;
-      color: white;
-    }
-  
-    
-    > main > p {
-      font: 900 1rem "Roboto";
-      color: white;
-    }
-  }
+  width: 100%;
+  height: 100vh;
+  background-color: #090c31;
+ 
+  position: relative; 
+
   
  
-
-
-  .home2 {
-    width: 100%;
-    height: 120vh;
-    background-color: #090c31;
-    margin-top: -200px;
-    display: flex;
-    padding-top: 60vh;
-}
-
-.home2 > div {
-    width: 70%;
-    height: 120vh;
-    background-color: white;
-    border-radius: 0 200px 200px 0;
+ 
+  > main {
+    position: absolute;
+    text-transform: uppercase;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
     padding: 2rem;
+    justify-content: center;
+    
+  }
+
+
+  > main > h1 {
+    font: 400 6rem;
+    color: white;
+  }
+
+  
+  > main > p {
+    font: 900 1rem "Roboto";
+    color: white;
+  }
+}
+
+
+
+
+.home2 {
+  width: 100%;
+  background-color: #090c31;
+  margin-top: 5rem;
+  display: flex;
+  padding-top: 60vh;
+  height: auto;
+}
+
+.home2 > div {
+  width: 70%;
+  height: 120vh;
+  background-color: white;
+  border-radius: 0 200px 200px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  margin-top: 20px;
 }
 
 .home2 > div > h1 {
-    text-transform: uppercase;
-    border-bottom: 2px solid #090c31;
-    padding: 0.5rem;
-    width: 15rem;
-    color: #090c31;
+  text-transform: uppercase;
+  border-bottom: 2px solid #090c31;
+  padding: 0.5rem;
+  width: 15rem;
+  color: #090c31;
 }
 
 .home2 > div > p {
-    padding: 5rem;
-    letter-spacing: 1px;
-    word-spacing: 5px;
-    line-height: 170%;
-    font: italic 100 1.2rem cursive;
+  padding: 5rem;
+  letter-spacing: 1px;
+  word-spacing: 5px;
+  line-height: 170%;
+  font: italic 100 1.2rem cursive;
 }
 
 .feedbacks{
-  
-  padding: 5rem;
-  color: white;
-  background-color: purple;
+
+padding: 5rem;
+color: white;
+background-color: purple;
 
 }
 
 .feedbacks>h1{
-  text-align: center;
+text-align: center;
 }
